# LSTM

./: .gitignore  Makefile  README.md  pyproject.toml  run_all.txt  test_sentences.txt
09_Downloaded_Corpora/: manifest.json
scripts/: __init__.py  guard.py
src/char_lstm/: __init__.py  _console.py  _types.py  data.py  model.py  train.py
src/char_lstm/guards/: __init__.py  test_quality_rules.py  util.py
tests/: conftest.py  test_data.py  test_guard.py  test_guards.py  test_model.py  test_train.py  test_train_checkpoint.py  test_train_config.py  test_train_epoch.py  test_train_integration.py  test_train_main.py  test_train_setup.py  test_train_wandb.py
