[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "char-lstm"
version = "0.1.0"
description = "Character-level LSTM training for Turkic languages"
authors = ["Austin Wagner <austinwagner@msn.com>"]
packages = [
  { include = "char_lstm", from = "src" }
]

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.5", source = "pytorch-cu124"}
numpy = "^2.0"
wandb = "^0.23.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.14.4"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src"]
mypy_path = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E","F","I","B","UP","N","C4","SIM","RET","RUF"]
fixable = ["ALL"]
