[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "char-lstm"
version = "0.1.0"
description = "Character-level LSTM training for Turkic languages"
authors = ["Austin Wagner <austinwagner@msn.com>"]
packages = [
  { include = "char_lstm", from = "src" }
]
include = ["src/char_lstm/py.typed"]

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.5", source = "pytorch-cu124"}
numpy = "^2.0"
wandb = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.6.1"
pytest-timeout = "^2.3.1"
mypy = "^1.13.0"
ruff = "^0.14.4"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["src", "tests", "scripts"]
mypy_path = ["src"]
explicit_package_bases = true

# Note: disallow_any_expr, disallow_any_decorated, disallow_any_explicit, and
# disallow_any_unimported are incompatible with PyTorch. PyTorch's stubs use
# Any extensively - nn.Module methods return Any, tensor operations return Any,
# and even isinstance(x, Tensor) fails because Tensor's type definition
# contains Any. These settings are kept disabled to allow PyTorch usage while
# maintaining all other strict type checking.

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E","F","I","B","BLE","UP","N","C4","SIM","RET","C90","RUF","ANN"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any" = { msg = "Do not use typing.Any; prefer precise types or Protocols/TypedDicts." }
"typing.cast" = { msg = "Do not use typing.cast; prefer adapters or precise types." }

[tool.coverage.run]
source = ["src", "scripts"]
omit = []
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v -n auto --dist loadscope"
timeout = 60
timeout_method = "thread"
